Made 622 project actual html rather than info graphic

--- a/projects/Autodesk_Consulting.html
+++ b/projects/Autodesk_Consulting.html
@@ -75,7 +75,7 @@
             </div>
           </div>
           <div class='col-half'>
-            <img src='../assets/Autodesk_Consulting/Autodesk_logo_dark_original.jpg' alt="Autodesk Logo">
+            <img src='../assets/Autodesk_Consulting/Autodesk_logo_dark.jpg' alt="Autodesk Logo">
           </div>
         </div>
       </div>
@@ -96,9 +96,104 @@
           </div>
         </div>
 
-        <div class='row'>
-            <img src="../assets/Autodesk_Consulting/process_flowchart.png" alt="Flowchart for the group project">
+        <div class ='row'>
+
+          <div class='col-half'>
+            <h3>1. Interaction Map</h3>
+            <p>The team started our research creating an interaction map of the help documentation Autodesk provides to users, both online and in the Revit LT software.</p>
+            <h4>Key Findings</h4>
+            <ul>
+              <li>Most help in the software directs users to online documentation</li>
+              <li>Many sources of online help, the large volume might overwhelm new users</li>
+            </ul>
+          </div>
+          <div class='col-half'>
+            <img src="../assets/Autodesk_Consulting/concept map image.svg" alt="Concept map illustration">
+          </div>
+          <div class='col-half'>
+            <h3>2. User Interviews</h3>
+            <p>Next we interviewed architecture software users to build personas that match new Revit LT users. In total we interviewed four people, two students and two professionals, who had a varying levels of Revit LT experience.</p>
+            <p>I helped recruit users, create the interview protocol, conduct two interviews, and create one of three personas.</p>
+            <h4>Key Findings</h4>
+            <ul>
+              <li>Users’ previous CAD experiences were not translating to proficiency with Revit LT</li>
+              <li>Users preferred a walkthrough-style approach to tutorial materials</li>
+            </ul>
+          </div>
+          <div class='col-half'>
+            <img src="../assets/Autodesk_Consulting/interview image.svg" alt="User interview illustration">
+          </div>
+          <div class='col-half'>
+            <h3>3. Competitive Evaluation</h3>
+            <p>We researched five products we considered direct or partial competitors of Revit LT to compare the online learning materials each company offers. Our evaluation helped find some methods Revit LT could incorporate.</p>
+            <h4>Key Findings</h4>
+            <ul>
+              <li>Help materials were often synthesized in a combination of visual and text media</li>
+              <li>For most products, official forums exist and are used as separate knowledge bases</li>
+              <li>For some products, help content is tailored to different BIM proficiency levels</li>
+            </ul>
+          </div>
+          <div class='col-half'>
+            <img src="../assets/Autodesk_Consulting/comp eval image.svg" alt="Competitive evaluation illustration">
+          </div>
+          <div class='col-half'>
+            <h3>4. Online Survey</h3>
+            <p>Our team followed the competitive evaluation up with a survey we distributed to Revit LT users, both university students and professionals. Our goals was to gather opionions about Autodesk’s online help documentation and onboarding materials from a wide audience, as well as demographic details about users, and more general preferences regarding methods of online learning.</p>
+            <p>The survey was live for 10 days and we gathered 63 complete responses. I assisted the team with distributing the survey online, and with analyzing our results to draw conclusions to present to Autodesk.</p>
+            <h4>Key Findings</h4>
+            <ul>
+              <li>YouTube videos, <span style='font-style: italic;'>especially non-Autodesk created videos</span>, are popular for learning across age groups</li>
+              <li>There was a strong preference for documentation with videos and images, and step-by-step, guided help</li>
+              <li>Users find Autodesk community forums more helpful than provided documentation</li>
+            </ul>
+          </div>
+          <div class='col-half'>
+            <img src="../assets/Autodesk_Consulting/survey image.svg" alt="Online survey illustration">
+          </div>
+          <div class='col-half'>
+            <h3>5. Heuristic Evaluation</h3>
+            <p>Using the 10 usability heuristics from Jakob Nielsen we investigated the information structure and usability of Revit LT’s sources of help documentation. I focused on the help documentation within the software, but also evaluated the online resources and aggregated those findings with my teammates.</p>
+            <h4>Key Findings</h4>
+            <ul>
+              <li>The heuristic most critically violated was “Error prevention and recovery”</li>
+              <li>The next most critically violated were “Match between system and the real world” and “User control and freedom”</li>
+            </ul>
+          </div>
+          <div class='col-half'>
+            <img src="../assets/Autodesk_Consulting/heur eval image.svg" alt="Heuristic evaluation illustration">
+          </div>
+          <div class='col-half'>
+            <h3>6. Preference Testing</h3>
+            <p>Next, our team conducted preference tests to assess user reactions to changes suggested by our survey and heuristic evaluation findings. The tests asked participants to which of two screens they preferred, one the current state of Revit LT’s help documentation and another a mockup our team created with small changes made.</p>
+            <p>I distributed the test to architects of varying backgrounds as a Google Form, and anaylzed our 10 responses to draw conclusions for Autodesk.</p>
+            <h4>Key Findings</h4>
+            <ul>
+              <li>Users described a preference for a clear information hierarchy when they’re searching for help online</li>
+              <li>Users often preferred all the relevant information to be consolidated to one page</li>
+            </ul>
+          </div>
+          <div class='col-half'>
+            <img src="../assets/Autodesk_Consulting/preference test image.svg" alt="Preference testing illustration">
+          </div>
+          <div class='col-half'>
+            <h3>7. Usability Testing</h3>
+            <p>Based on all our previous research we designed and conducted usability tests to gather first-hand data about how users use Revit LT’s help documentation. We met with five University of Michigan architecture students, sophomore to graduate level, for 30 to 60 minutes, and recorded the test audio and video for further analysis.</p>
+            <h4>Key Findings</h4>
+            <ul>
+              <li>Users often missed feature descriptions due to slow response times for hover instructions in the software</li>
+              <li>Advanced and intermediate users noted that online documentation weren’t always in line with the models and methods they believed were relevant</li>
+              <li>Search functionality was used more than organic browsing through the help sites, <span style='font-style: italic;'>regardless of experience level</span></li>
+            </ul>
+          </div>
+          <div class='col-half'>
+            <img src="../assets/Autodesk_Consulting/usab test image.svg" alt="Usability testing illustration">
+          </div>
+
         </div>
+
+        <!-- <div class='row'>
+            <img src="../assets/Autodesk_Consulting/process_flowchart.png" alt="Flowchart for the group project">
+        </div> -->
         <div class='row'>
           <div class='text-wrapper'>
             <h2>Overall Findings</h2>
