initial mapme page created

--- a/index.html
+++ b/index.html
@@ -55,22 +55,19 @@
 
         <div class='row'>
           <div class='col-half'>
-            <a href='projects/3D_Emergency.html'>
-              <img class='thumbnail' src='assets/Thumbnails/3de_thumbnail.png'>
+            <a href='projects/mapme.html'>
+              <img class='thumbnail' src='assets/Thumbnails/mapme thumbnail.png'>
             </a>
-            <!-- <div class='project-label'>
-              <h2>3D Emergency</h2>
-              <h4>UX Design and Research</h4>
-            </div> -->
           </div>
           <div class='col-half'>
             <a href='projects/Autodesk_Consulting.html'>
               <img class='thumbnail' src='assets/Thumbnails/622.png'>
             </a>
-            <!-- <div class='project-label'>
-              <h2>Learning Revit LT</h2>
-              <h4>User Experience Research</h4>
-            </div> -->
+          </div>
+          <div class='col-half'>
+            <a href='projects/3D_Emergency.html'>
+              <img class='thumbnail' src='assets/Thumbnails/3de_thumbnail.png'>
+            </a>
           </div>
         </div>
       </div>
