Added buffer below project cards

--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
         </div>
 
         <div class='row'>
-          <div class='col-half'>
+          <div class='col-half project-card-buffer'>
             <a href='projects/mapme.html'>
               <img class='thumbnail' src='assets/Thumbnails/mapme thumbnail.png'>
             </a>
           </div>
-          <div class='col-half'>
+          <div class='col-half project-card-buffer'>
             <a href='projects/Autodesk_Consulting.html'>
               <img class='thumbnail' src='assets/Thumbnails/622.png'>
             </a>
