--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
 
         <div class='row'>
           <div class='col-half project-card-buffer'>
+            <a href='projects/ai_internship.html'>
+              <img class='thumbnail' src='assets/Thumbnails/internship thumbnail.png'>
+            </a>
+          </div>
+          <div class='col-half project-card-buffer'>
             <a href='projects/mapme.html'>
               <img class='thumbnail' src='assets/Thumbnails/mapme thumbnail.png'>
             </a>
