Added Learner Progress cards work

--- a/projects/ai_internship.html
+++ b/projects/ai_internship.html
@@ -83,19 +83,6 @@
           </div>
         </div>
 
-        <!-- <div class="row">
-          <div class="text-wrapper">
-            <h2>Goals for the Summer</h2>
-            <p>I had four goals I wanted to accomplish during my summer with Academic Innovation.</p>
-            <ol>
-              <li>Practice presenting designs to a variety of stakeholders</li>
-              <li>Design collaboratively with other designers and developers on projects</li>
-              <li>Become more familiar with how UX Designers fit into the typical web development life cycle</li>
-              <li>Improve my front-end web development skills</li>
-            </ol>
-          </div>
-        </div> -->
-
         <div class="row">
           <div class="text-wrapper">
             <h2>Large Project: New Degree Details Page</h2>
@@ -106,7 +93,47 @@
         <div class="row">
           <div class="text-wrapper">
             <h2>Small Project: Learner Progress Cards</h2>
-            <p>Info about cards</p>
+            <p>The Michigan Online team was designing a new experience called "My Learning" for users to help them view the progress they've made across all the MOOCs they participated in through Michigan Online. I was tasked with finalizing the designs of the cards that would be given to each learning experience in a user's "My Learning" page.</p>
+          </div>
+
+          <div class='col-half'>
+            <h3>Initial Designs</h3>
+            <p>I was given an original set of card designs that were created when the "My Learning" experience was being brainstormed. I collected feedback from four potential users to identify areas to improve, and began iterating over various designs.</p>
+          </div>
+          <div class='col-half'>
+            <img src='../assets/ai_internship/LP_initial.png'>
+          </div>
+
+          <div class='col-half'>
+            <h3>First iteration</h3>
+            <p>.</p>
+          </div>
+          <div class='col-half'>
+            <img src='../assets/ai_internship/LP_First Iteration.png'>
+          </div>
+
+          <div class='col-half'>
+            <h3>Mid Point</h3>
+            <p>.</p>
+          </div>
+          <div class='col-half'>
+            <img src='../assets/ai_internship/LP_Mid point.png'>
+          </div>
+
+          <div class='col-full'>
+            <h3>Final Designs</h3>
+          </div>
+          <div class='col-quarter'>
+            <img src='../assets/ai_internship/LP_Final Enrolled.png'>
+          </div>
+          <div class='col-quarter'>
+            <img src='../assets/ai_internship/LP_Final Completed.png'>
+          </div>
+          <div class='col-quarter'>
+            <img src='../assets/ai_internship/LP_Final Favorites.png'>
+          </div>
+          <div class='col-quarter'>
+            <img src='../assets/ai_internship/LP_Final Recommended.png'>
           </div>
         </div>
 
