small edits to the copy

--- a/projects/ai_internship.html
+++ b/projects/ai_internship.html
@@ -106,7 +106,7 @@
 
           <div class='col-half'>
             <h3>First iteration</h3>
-            <p>.</p>
+            <p>I focused mostly on which pieces of information we wanted to include on each type of card. We needed to determine how much information about a learning experience we could include before things started to feel cluttered.</p>
           </div>
           <div class='col-half'>
             <img src='../assets/ai_internship/LP_First Iteration.png'>
@@ -114,15 +114,18 @@
 
           <div class='col-half'>
             <h3>Mid Point</h3>
-            <p>.</p>
+            <p>Further iterations focused on smaller elements such as how we should visualize a user's progress in a course.</p>
           </div>
           <div class='col-half'>
             <img src='../assets/ai_internship/LP_Mid point.png'>
           </div>
 
-          <div class='col-full'>
+          <div class='col-half'>
             <h3>Final Designs</h3>
+            <p>These are the final designs I created that the Michigan Online team approved and placed onto the four screens of the future "My Learning" experience.
           </div>
+        </div>
+        <div class='row'>
           <div class='col-quarter'>
             <img src='../assets/ai_internship/LP_Final Enrolled.png'>
           </div>
