Fixed grammar error on homepage

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       <div class='container'>
         <div class='homepage-header'>
           <h1>Hello -</h1>
-          <h3><a href='About.html' style='text-decoration: none; color: #313131'>I'm Jackson</a> and I'm a interaction designer and developer.</h3>
+          <h3><a href='About.html' style='text-decoration: none; color: #313131'>I'm Jackson,</a> an interaction designer and developer.</h3>
           <p>I focus on how technology can deliver better information to improve people's lives and communities. I'm currently a master's student at the University of Michigan, and I'm searching for full-time positions.</p>
         </div>
 
