--- a/projects/ai_internship.html
+++ b/projects/ai_internship.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" type="text/css" href="../styles/css/ai_internship.css">
 
     <!-- Typefaces -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.typekit.net/faz2ajf.css">
 
     <!-- icon library -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
