initial new format created

--- a/projects/mapme.html
+++ b/projects/mapme.html
@@ -51,33 +51,19 @@
 
       <div class = "container">
         <div class='row'>
-          <div class='project-title col-full'>
+          <div class='col-half'>
             <h1 class='project-name'>MapMe</h1>
             <h1 class='project-subtitle'>Grocery shopping, quicker.</h1>
           </div>
           <div class='col-half'>
-            <div class='project-summary'>
-              <h3>Overview</h3>
-              <p>A group project to improve grocery shopping using pervasive interaction design methods.</p>
-            </div>
-            <div class='project-summary'>
-              <h3>Role</h3>
-              <p>User Researcher</p>
-              <p>Prototyper</p>
-              <p>Project Manager</p>
-            </div>
-            <div class='project-summary'>
-              <h3>Methods</h3>
-              <p>Cultural Probes</p>
-              <p>User Enactments</p>
-              <p>Paper and Physical Prototyping</p>
-            </div>
-            <div class='project-summary'>
-              <h3>Timeframe</h3>
+            <p>A group project to improve grocery shopping using pervasive interaction design methods.</p>
+            <div class='project-details'>
+              <p>User Researcher / Prototyper / Project Manager</p>
+              <p>Cultural Probes / User Enactments / Paper and Physical Prototyping</p>
               <p>Sep. 2019 - Dec. 2019</p>
             </div>
           </div>
-          <div class='col-half'>
+          <div class='col-full'>
             <img src='../assets/mapme/Branding_Guidelines.jpg' alt="MapMe Branding Guidelines">
           </div>
         </div>
