added new header to MapMe project

--- a/projects/mapme.html
+++ b/projects/mapme.html
@@ -50,19 +50,21 @@
       </div>
 
       <div class = "container">
-        <div class='row'>
+        <div class='row margin-top-4 margin-bottom-4'>
           <div class='col-half'>
-            <h1 class='project-name'>MapMe</h1>
-            <h1 class='project-subtitle'>Grocery shopping, quicker.</h1>
+            <div class='project-title'>MapMe</div>
+            <div class='project-subtitle'>Grocery shopping, quicker.</div>
           </div>
           <div class='col-half'>
             <p>A group project to improve grocery shopping using pervasive interaction design methods.</p>
             <div class='project-details'>
               <p>User Researcher / Prototyper / Project Manager</p>
               <p>Cultural Probes / User Enactments / Paper and Physical Prototyping</p>
-              <p>Sep. 2019 - Dec. 2019</p>
+              <p>Sep. - Dec. 2019</p>
             </div>
           </div>
+        </div>
+        <div class='row'>
           <div class='col-full'>
             <img src='../assets/mapme/Branding_Guidelines.jpg' alt="MapMe Branding Guidelines">
           </div>
