added new header to 3DE project

--- a/projects/3D_Emergency.html
+++ b/projects/3D_Emergency.html
@@ -50,31 +50,22 @@
       </div>
 
       <div class = "container">
+        <div class='row margin-top-4 margin-bottom-4'>
+          <div class='col-half'>
+            <div class='project-title'>3D Emergency</div>
+            <div class='project-subtitle'>Get help faster.</div>
+          </div>
+          <div class='col-half'>
+            <p>A solo project focusing on interaction design as a method to improve calling 911 in the United States.</p>
+            <div class='project-details'>
+              <p>User Experience Designer / User Interface Designer</p>
+              <p>Adobe Illustrator / Adobe XD</p>
+              <p>Sep. - Dec. 2018</p>
+            </div>
+          </div>
+        </div>
         <div class='row'>
-          <div class='project-title col-full'>
-            <h1 class='project-name'>3D Emergency</h1>
-            <h1 class='project-subtitle'>Get help faster.</h1>
-          </div>
-          <div class='col-half'>
-            <div class='project-summary'>
-              <h3>Overview</h3>
-              <p>A solo project focusing on interaction design as a method to improve calling 911 in the United States.</p>
-            </div>
-            <div class='project-summary'>
-              <h3>Role</h3>
-              <p>User Experience Designer</p>
-              <p>User Interface Designer</p>
-            </div>
-            <div class='project-summary'>
-              <h3>Tools</h3>
-              <p>Adobe Illustrator and Adobe XD</p>
-            </div>
-            <div class='project-summary'>
-              <h3>Timeframe</h3>
-              <p>Sep. 2018 - Dec. 2018</p>
-            </div>
-          </div>
-          <div class='col-half'>
+          <div class='col-full'>
             <img src="../assets/3D_Emergency/mobile_screen_mockup_collage.png" class="img-fluid" alt="Screenshots on generic mockups">
           </div>
         </div>
