added new header to AI project

--- a/projects/ai_internship.html
+++ b/projects/ai_internship.html
@@ -50,27 +50,22 @@
       </div>
 
       <div class = "container">
-        <div class='row'>
-          <div class='project-title col-full'>
-            <h1 class='project-name'>Michigan Online</h1>
-            <h1 class='project-subtitle'>Designing and developing.</h1>
+        <div class='row margin-top-4 margin-bottom-4'>
+          <div class='col-half'>
+            <div class='project-title'>Michigan Online</div>
+            <div class='project-subtitle'>Designing and developing.</div>
           </div>
           <div class='col-half'>
-            <div class='project-summary'>
-              <h3>Job Title</h3>
+            <p>I improved the usability of existing AI tools and designed the experience of new products. I also helped to conduct user research and assisted with UI design, rapid prototyping, and web-based tool development.</p>
+            <div class='project-details'>
               <p>User Experience Design Fellow</p>
-            </div>
-            <div class='project-summary'>
-              <h3>Responsibilities</h3>
-              <p>Improved the usability of existing AI tools and designed the experience of new products. Helped to conduct user research and assisted with UI design, rapid prototyping, and web-based tool development.</p>
-            </div>
-            <div class='project-summary'>
-              <h3>Timeframe</h3>
-              <p>May 2019 - Aug. 2019</p>
+              <p>May - Aug. 2019</p>
             </div>
           </div>
-          <div class='col-half'>
-            <img class='screenshot' src='../assets/ai_internship/MO homepage.png' alt="MO Homepage">
+        </div>
+        <div class='row'>
+          <div class='col-full'>
+            <img  src='../assets/ai_internship/MO homepage.png' alt="MO Homepage">
           </div>
         </div>
       </div>
