added new header to 622 project

--- a/projects/Autodesk_Consulting.html
+++ b/projects/Autodesk_Consulting.html
@@ -50,31 +50,22 @@
       </div>
 
       <div class = "container">
+        <div class='row margin-top-4 margin-bottom-4'>
+          <div class='col-half'>
+            <div class='project-title'>Learning Revit LT</div>
+            <div class='project-subtitle'>Evaluating onboarding resources.</div>
+          </div>
+          <div class='col-half'>
+            <p>A project focused on user research, needs assessment, and usability testing by Corzetti Labs.</p>
+            <div class='project-details'>
+              <p>User Experience Researcher / Usability Tester</p>
+              <p>Heuristic Evaluation / Surveys / Preference Testing / Usability Testing</p>
+              <p>Jan. - Apr. 2019</p>
+            </div>
+          </div>
+        </div>
         <div class='row'>
-          <div class='project-title col-full'>
-            <h1 class='project-name'>Learning Revit LT</h1>
-            <h1 class='project-subtitle'>Evaluating onboarding resources.</h1>
-          </div>
-          <div class='col-half'>
-            <div class='project-summary'>
-              <h3>Overview</h3>
-              <p>A project focused on user research, needs assessment, and usability testing by Corzetti Labs.</p>
-            </div>
-            <div class='project-summary'>
-              <h3>Role</h3>
-              <p>User Experience Researcher</p>
-              <p>Usability Tester</p>
-            </div>
-            <div class='project-summary'>
-              <h3>Tools</h3>
-              <p>Revit LT</p>
-            </div>
-            <div class='project-summary'>
-              <h3>Timeframe</h3>
-              <p>Jan. 2019 - Apr. 2019</p>
-            </div>
-          </div>
-          <div class='col-half'>
+          <div class='col-full'>
             <img src='../assets/Autodesk_Consulting/Autodesk_logo_dark.jpg' alt="Autodesk Logo">
           </div>
         </div>
