--- a/About.html
+++ b/About.html
@@ -49,10 +49,10 @@
       </div>
 
       <div class = "container">
-        <div class='row'>
-          <div class='project-title col-full'>
-            <h1 class='project-name'>Hi, I'm Jackson.</h1>
-            <h1 class='project-subtitle'>It's nice to meet you.</h1>
+        <div class='row margin-top-4 margin-bottom-4'>
+          <div class='col-full'>
+            <div class='project-title'>Hi, I'm Jackson.</div>
+            <div class='project-subtitle'>It's nice to meet you.</div>
           </div>
         </div>
         <div class = "row">
