Updated hero images

--- a/projects/Autodesk_Consulting.html
+++ b/projects/Autodesk_Consulting.html
@@ -66,7 +66,7 @@
         </div>
         <div class='row'>
           <div class='col-full'>
-            <img src='../assets/Autodesk_Consulting/Autodesk_logo_dark.jpg' alt="Autodesk Logo">
+            <img src='../assets/Autodesk_Consulting/mockup image.png' alt="Revit LT on two floating MacBook mockups">
           </div>
         </div>
       </div>
