updated first images

--- a/projects/mapme.html
+++ b/projects/mapme.html
@@ -64,11 +64,11 @@
             </div>
           </div>
         </div>
-        <div class='row'>
+        <!-- <div class='row'>
           <div class='col-full'>
             <img src='../assets/mapme/Branding_Guidelines.jpg' alt="MapMe Branding Guidelines">
           </div>
-        </div>
+        </div> -->
       </div>
 
       <div class="container">
@@ -77,7 +77,7 @@
             <img src="../assets/mapme/intro1.jpg" alt="Physical prototype image">
           </div>
           <div class='col-half'>
-            <img src="../assets/mapme/intro2.png" alt="Interactive prototype image">
+            <img src="../assets/mapme/intro2.png" alt="Interactive prototype image" style='max-height: 80vh'>
           </div>
         </div>
         <div class="row">
