First test of adding white space between sections

--- a/projects/ai_internship.html
+++ b/projects/ai_internship.html
@@ -71,7 +71,7 @@
       </div>
 
       <div class="container">
-        <div class="row">
+        <div class="row margin-bottom-8">
           <div class="text-wrapper">
             <p>The University of Michigan's <a href='https://ai.umich.edu/' target='_blank'>Center for Academic Innovation</a> is a organization that strives to make world-class education available to anyone who desires it. They use design, research, expertise, and technology to bring better learning experiences to larger audiences than ever before, and I served as a <span style='font-weight: bold;'>UX Design Fellow </span> to design and develop new experiences.</p>
             <p>One of those tools that AI has created is <a href='https://online.umich.edu/' target='_blank'>Michigan Online</a>, and it served as my main area of focus. Michigan Online strives to make the world-class educational opportunities from the University of Michigan available to the full U-M community and help learners connect during their educational journeys. </p>
