added whitespace to AI project

--- a/projects/ai_internship.html
+++ b/projects/ai_internship.html
@@ -78,9 +78,9 @@
           </div>
         </div>
 
-        <div class="row">
+        <div class="row margin-bottom-4">
           <div class="text-wrapper">
-            <h2>Large Project: Degree Details Design and Implementation</h2>
+            <h2>Degree Details Design and Implementation</h2>
             <p>The content library on Michigan Online is growing rapidly, and their catalog of online degrees is becoming increasingly popular. Pursuing an online degree from the University of Michigan is a large investment of time and money, and many learners will want to do lots of research before making their decision. An improved experience needed to be designed and developed to give learners the detailed information they’re seeking during their research.</p>
           </div>
         </div>
@@ -92,7 +92,7 @@
           </div>
         </div>
 
-        <div class="row">
+        <div class="row margin-bottom-4">
           <div class="col-half">
             <img src='../assets/ai_internship/course details.png' alt='Michigan Online course details page'>
           </div>
@@ -101,7 +101,7 @@
           </div>
         </div>
 
-        <div class="row">
+        <div class="row margin-bottom-4">
           <div class="text-wrapper">
             <h3>Need for More Information</h3>
             <p>Coursera has plenty of information about the available online degrees. That is where students watch the lecture videos for the MOOCs and online degrees they’re enrolled in, and those individual Coursera pages are maintained by the respective U-M colleges who offer the degrees.</p>
@@ -195,7 +195,7 @@
             <p>To avoid creating enormous pages we added tab navigation to our page. This greatly reduced the page length and made it easier for users to find the information they are searching for. The header gives learners call-to-action buttons to learn more or apply to the program.</p>
           </div>
         </div>
-        <div class="row">
+        <div class="row margin-bottom-4">
           <div class="col-half">
             <p>The Overview contains copy that describes the degree, skills you’ll learn, and who the degree is intended for.</p>
             <img src='../assets/ai_internship/degree_details_4_1.png' alt='Final iteration 1'>
@@ -214,7 +214,7 @@
           </div>
         </div>
 
-        <div class="row">
+        <div class="row  margin-bottom-4">
           <div class="text-wrapper">
             <h3>Implementation</h3>
             <p>Once the final design iteration above was approved by Academic Innovation’s Associate Vice Provost and the rest of the Michigan Online team I was tasked with implementing the front end of the page. I constructed the necessary HTML and Less/CSS to build the framework and styling for each of the Degree Details pages.</p>
@@ -229,7 +229,7 @@
           </div>
         </div>
 
-        <div class="row">
+        <!-- <div class="row">
           <div class="text-wrapper">
             <h2>Small Project: Learner Progress Cards</h2>
             <p>The Michigan Online team was designing a new experience called "My Learning" for users to help them view the progress they've made across all the MOOCs they participated in through Michigan Online. I was tasked with finalizing the designs of the cards that would be given to each learning experience in a user's "My Learning" page.</p>
@@ -327,7 +327,7 @@
               <li>Best practices for web development of a large scale web site, and how UX Designers fit into development cycles</li>
             </ol>
           </div>
-        </div>
+        </div> -->
 
       </div>
     </main>
